--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven {url = "https://maven.kyrptonaught.dev"}
+
+	maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 }
 
 dependencies {
@@ -31,6 +34,11 @@ dependencies {
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+
+	modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta54-1.19'
+	include 'net.kyrptonaught:customportalapi:0.0.1-beta54-1.19'
+
+	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19:3.1.0'
 }
 
 processResources {
